infra/cloudformation/network-dev.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AnswerNow - Network Stack (VPC + 2 Private Subnets + Security Groups)

Parameters:
  VpcCidr:
    Type: String
    Default: 10.0.0.0/16

  PrivateSubnet1Cidr:
    Type: String
    Default: 10.0.1.0/24

  PrivateSubnet2Cidr:
    Type: String
    Default: 10.0.2.0/24

Resources:

  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: answernow-vpc-dev

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: Vpc
      Tags:
        - Key: Name
          Value: answernow-private-rt-dev

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock:
        Ref: PrivateSubnet1Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: answernow-private-subnet-1-dev

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: Vpc
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock:
        Ref: PrivateSubnet2Cidr
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: answernow-private-subnet-2-dev

  PrivateSubnet1RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable

  PrivateSubnet2RouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Lambda egress
      VpcId:
        Ref: Vpc
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: answernow-lambda-sg-dev

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Postgres from Lambda SG only
      VpcId:
        Ref: Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId:
            Ref: LambdaSecurityGroup
      Tags:
        - Key: Name
          Value: answernow-rds-sg-dev

  EndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS from Lambda to VPC Interface Endpoints
      VpcId:
        Ref: Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId:
            Ref: LambdaSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: answernow-endpoints-sg-dev

  SecretsManagerVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn: EndpointSecurityGroup
    Properties:
      VpcId:
        Ref: Vpc
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      ServiceName:
        Fn::Sub: com.amazonaws.${AWS::Region}.secretsmanager
      SubnetIds:
        - Ref: PrivateSubnet1
        - Ref: PrivateSubnet2
      SecurityGroupIds:
        - Ref: EndpointSecurityGroup

  CloudWatchLogsVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn: EndpointSecurityGroup
    Properties:
      VpcId:
        Ref: Vpc
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      ServiceName:
        Fn::Sub: com.amazonaws.${AWS::Region}.logs
      SubnetIds:
        - Ref: PrivateSubnet1
        - Ref: PrivateSubnet2
      SecurityGroupIds:
        - Ref: EndpointSecurityGroup

  KmsVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    DependsOn: EndpointSecurityGroup
    Properties:
      VpcId:
        Ref: Vpc
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      ServiceName:
        Fn::Sub: com.amazonaws.${AWS::Region}.kms
      SubnetIds:
        - Ref: PrivateSubnet1
        - Ref: PrivateSubnet2
      SecurityGroupIds:
        - Ref: EndpointSecurityGroup

Outputs:

  VpcId:
    Description: VPC Id
    Value:
      Ref: Vpc

  PrivateSubnet1Id:
    Description: Private Subnet 1
    Value:
      Ref: PrivateSubnet1

  PrivateSubnet2Id:
    Description: Private Subnet 2
    Value:
      Ref: PrivateSubnet2

  LambdaSecurityGroupId:
    Description: Lambda Security Group
    Value:
      Ref: LambdaSecurityGroup

  RdsSecurityGroupId:
    Description: RDS Security Group
    Value:
      Ref: RdsSecurityGroup

  EndpointSecurityGroupId:
    Description: Security Group for VPC Interface Endpoints
    Value:
      Ref: EndpointSecurityGroup
